加入录波图形显示框架

--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -19,3 +19,16 @@ upgrade=Software Upgrade
 setpwd=Change Password
 reboot=Reboot
 syslog=System Log
+wave-graph=Graph
+wave-hdr=Header
+hdr-overview=Overview
+hdr-fault=Fault Information
+hdr-action=Action Information
+hdr-diBeforeFault=Digital Status Before Fault
+hdr-distatus=Digital Status
+hdr-setting=Setting Information
+time=Time
+name=Name
+value=Value
+phase=Phase
+faultinfo=Fault Info
