--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -19,3 +19,16 @@ upgrade=\u8f6f\u4ef6\u5347\u7ea7
 setpwd=\u4fee\u6539\u5bc6\u7801
 reboot=\u91cd\u542f
 syslog=\u7cfb\u7edf\u65e5\u5fd7
+wave-graph=\u66F2\u7EBF\u56FE
+wave-hdr=\u5934\u6587\u4EF6
+hdr-overview=\u6982\u51B5\u4FE1\u606F
+hdr-fault=\u6545\u969C\u4FE1\u606F
+hdr-action=\u52A8\u4F5C\u4FE1\u606F
+hdr-diBeforeFault=\u6545\u969C\u524D\u5F00\u5173\u91CF\u72B6\u6001
+hdr-distatus=\u5F00\u5173\u91CF\u72B6\u6001
+hdr-setting=\u5B9A\u503C\u4FE1\u606F
+time=\u65F6\u95F4
+name=\u540D\u79F0
+value=\u503C
+phase=\u76F8\u4F4D
+faultinfo=\u6545\u969C\u4FE1\u606F
