录波浏览插件优化
1.增加国际化支持
2.禁用右键菜单
3.打开时自动将滚动条复位到0的位置，Tab复位到第一个Tab页的位置

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -1,1 +1,13 @@
 hello=Welcome
+b_time=Time
+b_curdi=The [action] channels at current moment
+b_primarycursor='  Primary Cursor:'
+b_secondcursor='  Second Cursor:'
+b_effectivevalue='  Effective Value:'
+b_reset=Reset
+b_action=Action
+b_hdrnotexist=Header file doesn't exist
+b_hdrformaterror=Header file format error
+b_faultstarttime=Fault start time
+b_faultduration=Fault duration
+b_filesize=File Size(Byte)
