--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -1,1 +1,13 @@
 hello=\u6B22\u8FCE
+b_time=\u65F6\u95F4
+b_curdi=\u5F53\u524D\u65F6\u95F4[\u52A8\u4F5C]\u7684\u5F00\u5173
+b_primarycursor='  \u4E3B\u6E38\u6807:'
+b_secondcursor='  \u526F\u6E38\u6807:'
+b_effectivevalue='  \u6709\u6548\u503C:'
+b_reset=\u590D\u5F52
+b_action=\u52A8\u4F5C
+b_hdrnotexist=HDR\u6587\u4EF6\u4E0D\u5B58\u5728
+b_hdrformaterror=HDR\u6587\u4EF6\u683C\u5F0F\u9519\u8BEF
+b_faultstarttime=\u6545\u969C\u8D77\u59CB\u65F6\u95F4
+b_faultduration=\u6545\u969C\u6301\u7EED\u65F6\u95F4
+b_filesize=\u6587\u4EF6\u5927\u5C0F(\u5B57\u8282)
