确定运行状态页面大体风格结构，还缺少装置图形和图标

--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -32,3 +32,7 @@ name=\u540D\u79F0
 value=\u503C
 phase=\u76F8\u4F4D
 faultinfo=\u6545\u969C\u4FE1\u606F
+runstatus_title_overview=\u603B\u89C8
+runstatus_title_record=\u5F55\u6CE2
+runstatus_title_network=\u7F51\u7EDC
+runstatus_title_version=\u7248\u672C
