--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -32,3 +32,7 @@ name=Name
 value=Value
 phase=Phase
 faultinfo=Fault Info
+runstatus_title_overview=Overview
+runstatus_title_record=Recording
+runstatus_title_network=Network
+runstatus_title_version=Version
