增加网络参数配置页面
1.调整导航条
2.增加网络参数配置页面
3.使用JS制作IP输入控件

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -1,4 +1,5 @@
-hello=Welcome
+tip_inputname=Please input user name
+tip_inputpwd=Please input password
 b_time=Time
 b_curdi=The [action] channels at current moment
 b_primarycursor='  Primary Cursor:'
