--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -9,16 +9,19 @@ Inputaccount_tip=Account
 Inputpwd_tip=Password
 close=Close
 confirm=Confirm
-runstatus=Run Status
-setupwizard=Setup Wizard
-network=Network
-faultrecord=Fault Record
-systemtool=System Tool
-settime=Setup Time
-upgrade=Software Upgrade
-setpwd=Change Password
-reboot=Reboot
-syslog=System Log
+nav_runstatus=Run Status
+nav_setup=Setup
+nav_setup_network=Network
+nav_setup_primarydev=Primary device
+nav_setup_channel=Channel
+nav_setup_setting=Setting
+nav_faultrecord=Fault Record
+nav_systemtool=System Tool
+nav_sys_settime=Setup Time
+nav_sys_upgrade=Software Upgrade
+nav_sys_setpwd=Change Password
+nav_sys_reboot=Reboot
+nav_sys_syslog=System Log
 wave-graph=Graph
 wave-hdr=Header
 hdr-overview=Overview
