--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -1,4 +1,5 @@
-hello=\u6B22\u8FCE
+tip_inputname=\u8BF7\u586B\u5199\u7528\u6237\u540D
+tip_inputpwd=\u8BF7\u586B\u5199\u5BC6\u7801
 b_time=\u65F6\u95F4
 b_curdi=\u5F53\u524D\u65F6\u95F4[\u52A8\u4F5C]\u7684\u5F00\u5173
 b_primarycursor='  \u4E3B\u6E38\u6807:'
