--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -9,16 +9,19 @@ Inputpwd_tip=\u8bf7\u8f93\u5165\u5bc6\u7801
 company_name=\u4e0a\u6d77\u5f55\u6ce2\u4fa0\u79d1\u6280\u6709\u9650\u516c\u53f8
 close=\u5173\u95ed
 confirm=\u786e\u5b9a
-runstatus=\u8fd0\u884c\u72b6\u6001
-setupwizard=\u8bbe\u7f6e\u5411\u5bfc
-network=\u7f51\u7edc\u53c2\u6570
-faultrecord=\u6545\u969c\u5f55\u6ce2
-systemtool=\u7cfb\u7edf\u5de5\u5177
-settime=\u65f6\u95f4\u8bbe\u7f6e
-upgrade=\u8f6f\u4ef6\u5347\u7ea7
-setpwd=\u4fee\u6539\u5bc6\u7801
-reboot=\u91cd\u542f
-syslog=\u7cfb\u7edf\u65e5\u5fd7
+nav_runstatus=\u8FD0\u884C\u72B6\u6001
+nav_setup=\u53C2\u6570\u914D\u7F6E
+nav_setup_network=\u7F51\u7EDC
+nav_setup_primarydev=\u4E00\u6B21\u8BBE\u5907
+nav_setup_channel=\u901A\u9053
+nav_setup_setting=\u5B9A\u503C
+nav_faultrecord=\u6545\u969c\u5f55\u6ce2
+nav_systemtool=\u7CFB\u7EDF\u5DE5\u5177
+nav_sys_settime=\u65f6\u95f4\u8bbe\u7f6e
+nav_sys_upgrade=\u8f6f\u4ef6\u5347\u7ea7
+nav_sys_setpwd=\u4fee\u6539\u5bc6\u7801
+nav_sys_reboot=\u91cd\u542f
+nav_sys_syslog=\u7cfb\u7edf\u65e5\u5fd7
 wave-graph=\u66F2\u7EBF\u56FE
 wave-hdr=\u5934\u6587\u4EF6
 hdr-overview=\u6982\u51B5\u4FE1\u606F
