增加装置基本参数设置，统一设置界面风格

--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -11,6 +11,7 @@ close=Close
 confirm=Confirm
 nav_runstatus=Run Status
 nav_setup=Setup
+nav_setup_dev=Device configure
 nav_setup_network=Network
 nav_setup_primarydev=Primary device
 nav_setup_channel=Channel
