--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -11,6 +11,7 @@ close=\u5173\u95ed
 confirm=\u786e\u5b9a
 nav_runstatus=\u8FD0\u884C\u72B6\u6001
 nav_setup=\u53C2\u6570\u914D\u7F6E
+nav_setup_dev=\u88C5\u7F6E\u53C2\u6570
 nav_setup_network=\u7F51\u7EDC
 nav_setup_primarydev=\u4E00\u6B21\u8BBE\u5907
 nav_setup_channel=\u901A\u9053
