很久没上传了，出差前上传一次

--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -9,9 +9,11 @@ Inputaccount_tip=Account
 Inputpwd_tip=Password
 close=Close
 confirm=Confirm
+btn_ok=Confirm
+btn_cancel=Cancel
 nav_runstatus=Run Status
-nav_setup=Setup
-nav_setup_dev=Device configure
+nav_setup=Device Parameter
+nav_setup_dev=Basic configure
 nav_setup_network=Network
 nav_setup_primarydev=Primary device
 nav_setup_channel=Channel
@@ -40,3 +42,55 @@ runstatus_title_overview=Overview
 runstatus_title_record=Recording
 runstatus_title_network=Network
 runstatus_title_version=Version
+devconf_heading=Device Basic Configure
+devconf_stationname=Station Name
+devconf_companyname=Company Name
+devconf_devname=Device Name
+devconf_serialno=Serial Number
+devconf_devmodel=Device Model
+devconf_commuprotocol=Communication Protocol
+syspwd_heading=Update user name and password
+syspwd_name=Name
+syspwd_oldpwd=Current password
+syspwd_newpwd=New password
+syspwd_newpwd_confirm=Confirm new password
+gmt-12=(GMT-12:00) International Date Line West
+gmt-11=(GMT-11:00) Midway Island, Samoa
+gmt-10=(GMT-10:00) Hawaii
+gmt-9=(GMT-09:00) Alaska
+gmt-8=(GMT-08:00) Pacific Time (US and Canada); Tijuana
+gmt-7=(GMT-07:00) Mountain Time (US and Canada), Chihuahua, La Paz, Mazatlan,Arizona
+gmt-6=(GMT-06:00) Central Time (US and Canada), Central America, Mexico City, Monterrey
+gmt-5=(GMT-05:00) Eastern Time (US and Canada), Indiana (East), Bogota, Lima, Quito 
+gmt-4=(GMT-04:00) Atlantic Time (Canada), Caracas, La Paz, Santiago
+gmt-330=(GMT-03:30) Newfoundland and Labrador
+gmt-3=(GMT-03:00) Brasilia, Buenos Aires, Georgetown, Greenland
+gmt-2=(GMT-02:00) Mid-Atlantic
+gmt-1=(GMT-01:00) Cape Verde Islands
+gmt0=(GMT) Greenwich Mean Time : Dublin, Edinburgh, Lisbon, London, Casablanca, Monrovia
+gmt1=(GMT+01:00)  Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna, Madrid, Paris
+gmt2=(GMT+02:00) Cairo, Athens, Istanbul, Minsk, Jerusalem
+gmt3=(GMT+03:00) Baghdad, Kuwait, Riyadh, Moscow, St. Petersburg, Volgograd
+gmt330=(GMT+03:30) Tehran
+gmt4=(GMT+04:00) Abu Dhabi, Muscat, Baku, Tbilisi, Yerevan
+gmt430=(GMT+04:30) Kabul
+gmt5=(GMT+05:00) Ekaterinburg, Islamabad, Karachi, Tashkent
+gmt530=(GMT+05:30) Chennai, Kolkata, Mumbai, New Delhi
+gmt545=(GMT+05:45) Kathmandu
+gmt6=(GMT+06:00) Astana, Dhaka, Sri Jayawardenepura, Almaty, Novosibirsk
+gmt630=(GMT+06:30) Yangon (Rangoon)
+gmt7=(GMT+07:00) Bangkok, Hanoi, Jakarta, Krasnoyarsk
+gmt8=(GMT+08:00) Beijing, Chongqing, Hong Kong SAR, Urumqi, Kuala Lumpur, Singapore, Taipei
+gmt9=(GMT+09:00) Seoul, Osaka, Sapporo, Tokyo, Yakutsk
+gmt930=(GMT+09:30) Darwin, Adelaide
+gmt10=GMT+10:00) Canberra, Melbourne, Sydney, Brisbane, Hobart, Vladivostok
+gmt11=(GMT+11:00) Magadan, Solomon Islands, New Caledonia
+gmt12=(GMT+12:00) Fiji Islands, Kamchatka, Marshall Islands, Auckland, Wellington
+gmt13=(GMT+13:00) Nuku'alofa
+systime_heading=Setup Time
+systime_zone=Time Zone
+systime_time=Time
+systime_synchronization=Setup Time Synchronization
+systime_sync_type=Synchronization Mode
+systime_sync_type_ntp=NTP
+systime_sync_server=Synchronization Server
