--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -9,9 +9,11 @@ Inputpwd_tip=\u8bf7\u8f93\u5165\u5bc6\u7801
 company_name=\u4e0a\u6d77\u5f55\u6ce2\u4fa0\u79d1\u6280\u6709\u9650\u516c\u53f8
 close=\u5173\u95ed
 confirm=\u786e\u5b9a
+btn_ok=\u786E\u5B9A
+btn_cancel=\u53D6\u6D88
 nav_runstatus=\u8FD0\u884C\u72B6\u6001
-nav_setup=\u53C2\u6570\u914D\u7F6E
-nav_setup_dev=\u88C5\u7F6E\u53C2\u6570
+nav_setup=\u88C5\u7F6E\u53C2\u6570
+nav_setup_dev=\u57FA\u672C\u914D\u7F6E
 nav_setup_network=\u7F51\u7EDC
 nav_setup_primarydev=\u4E00\u6B21\u8BBE\u5907
 nav_setup_channel=\u901A\u9053
@@ -40,3 +42,55 @@ runstatus_title_overview=\u603B\u89C8
 runstatus_title_record=\u5F55\u6CE2
 runstatus_title_network=\u7F51\u7EDC
 runstatus_title_version=\u7248\u672C
+devconf_heading=\u88C5\u7F6E\u57FA\u672C\u53C2\u6570
+devconf_stationname=\u5382\u7AD9\u540D\u79F0
+devconf_companyname=\u516C\u53F8\u540D\u79F0
+devconf_devname=\u88C5\u7F6E\u540D\u79F0
+deconf_serialno=\u5E8F\u5217\u53F7
+devconf_devmodel=\u88C5\u7F6E\u578B\u53F7
+devconf_commuprotocol=\u901A\u4FE1\u89C4\u7EA6
+syspwd_heading=\u4FEE\u6539\u7528\u6237\u540D\u548C\u5BC6\u7801
+syspwd_name=\u7528\u6237\u540D
+syspwd_oldpwd=\u5F53\u524D\u5BC6\u7801
+syspwd_newpwd=\u65B0\u5BC6\u7801
+syspwd_newpwd_confirm=\u786E\u8BA4\u65B0\u5BC6\u7801
+gmt-12=\uFF08GMT-12:00\uFF09\u57C3\u5C3C\u5A01\u6258\u514B\uFF0C\u5938\u8D3E\u6797\u5C9B
+gmt-11=\uFF08GMT-11:00\uFF09\u4E2D\u9014\u5C9B\uFF0C\u8428\u6469\u4E9A\u7FA4\u5C9B
+gmt-10=\uFF08GMT-10:00\uFF09\u590F\u5A01\u5937
+gmt-9=\uFF08GMT-09:00\uFF09\u963F\u62C9\u65AF\u52A0
+gmt-8=\uFF08GMT-08:00\uFF09\u592A\u5E73\u6D0B\u65F6\u95F4\uFF08\u7F8E\u56FD\u548C\u52A0\u62FF\u5927\uFF09\uFF1B\u8482\u534E
+gmt-7=\uFF08GMT-07:00\uFF09\u5C71\u5730\u65F6\u95F4\uFF08\u7F8E\u56FD\u548C\u52A0\u62FF\u5927\uFF09\uFF1B\u4E9A\u5229\u6851\u90A3
+gmt-6=\uFF08GMT-06:00\uFF09\u4E2D\u90E8\u65F6\u95F4\uFF08\u7F8E\u56FD\u548C\u52A0\u62FF\u5927\uFF09\uFF1B\u4E2D\u7F8E\u6D32\uFF0C\u58A8\u897F\u54E5\u57CE
+gmt-5=\uFF08GMT-05:00\uFF09\u4E1C\u90E8\u65F6\u95F4\uFF08\u7F8E\u56FD\u548C\u52A0\u62FF\u5927\uFF09\uFF1B\u6CE2\u54E5\u8FBE\uFF0C\u5229\u9A6C
+gmt-4=\uFF08GMT-04:00\uFF09\u5927\u897F\u6D0B\u65F6\u95F4\uFF08\u52A0\u62FF\u5927\uFF09\uFF1B\u52A0\u62C9\u52A0\u65AF\uFF0C\u5723\u5730\u4E9A\u54E5
+gmt-330=\uFF08GMT-03:30\uFF09 \u7EBD\u82AC\u5170
+gmt-3=\uFF08GMT-03:00\uFF09\u5DF4\u897F\u5229\u4E9A\uFF0C\u5E03\u5B9C\u8BFA\u65AF\u827E\u5229\u65AF\uFF0C\u4E54\u6CBB\u6566\uFF0C\u683C\u9675\u5170
+gmt-2=\uFF08GMT-02:00\uFF09\u4E2D\u5927\u897F\u6D0B
+gmt-1=\uFF08GMT-01:00\uFF09\u4F5B\u5F97\u89D2\u7FA4\u5C9B\uFF0C\u4E9A\u901F\u5C14\u7FA4\u5C9B
+gmt0=\uFF08GMT\uFF09\u683C\u6797\u5A01\u6CBB\u5E73\u65F6\uFF1B\u90FD\u67CF\u6797\uFF0C\u7231\u4E01\u5821\uFF0C\u4F26\u6566\uFF0C\u91CC\u65AF\u672C
+gmt1=\uFF08GMT\uFF0B01:00\uFF09\u963F\u59C6\u65AF\u7279\u4E39\uFF0C\u67CF\u6797\uFF0C\u7F57\u9A6C\uFF0C\u65AF\u5F97\u54E5\u5C14\u6469\uFF0C\u5DF4\u9ECE
+gmt2=\uFF08GMT\uFF0B02:00\uFF09\u5F00\u7F57\uFF0C\u96C5\u5178\uFF0C\u4F0A\u65AF\u5766\u5E03\u5C14\uFF0C\u660E\u65AF\u514B\uFF0C\u8036\u8DEF\u6492\u51B7
+gmt3=\uFF08GMT\uFF0B03:00\uFF09\u5DF4\u683C\u8FBE\uFF0C\u79D1\u5A01\u7279\uFF0C\u5229\u96C5\u5F97\uFF0C\u83AB\u65AF\u79D1\uFF0C\u5723\u5F7C\u5F97\u5821
+gmt330=\uFF08GMT\uFF0B03:30\uFF09 \u5FB7\u9ED1\u5170
+gmt4=\uFF08GMT\uFF0B04:00\uFF09\u963F\u5E03\u624E\u6BD4\uFF0C\u9A6C\u65AF\u5580\u7279\uFF0C\u5DF4\u5E93\uFF0C\u7B2C\u6BD4\u5229\u65AF\uFF0C\u57C3\u91CC\u6E29
+gmt430=\uFF08GMT\uFF0B04:30\uFF09 \u5580\u5E03\u5C14
+gmt5=\uFF08GMT\uFF0B05:00\uFF09\u53F6\u5361\u6377\u6797\u5821\uFF0C\u4F0A\u65AF\u5170\u5821\uFF0C\u5361\u62C9\u5947\uFF0C\u5854\u4EC0\u5E72
+gmt530=\uFF08GMT\uFF0B05:30\uFF09 \u9A6C\u5FB7\u62C9\u65AF\uFF0C\u52A0\u5C14\u5404\u7B54\uFF0C\u5B5F\u4E70\uFF0C\u65B0\u5FB7\u91CC
+gmt545=\uFF08GMT\uFF0B05:45\uFF09 \u52A0\u5FB7\u6EE1\u90FD
+gmt6=\uFF08GMT\uFF0B06:00\uFF09\u963F\u62C9\u6728\u56FE\uFF0C\u65B0\u897F\u4F2F\u5229\u4E9A\uFF0C\u963F\u65AF\u5854\u7EB3\uFF0C\u8FBE\u5361
+gmt630=\uFF08GMT\uFF0B06:30\uFF09 \u4EF0\u5149
+gmt7=\uFF08GMT\uFF0B07:00\uFF09\u66FC\u8C37\uFF0C\u96C5\u52A0\u8FBE\uFF0C\u6CB3\u5185
+gmt8=\uFF08GMT\uFF0B08:00\uFF09\u5317\u4EAC\uFF0C\u91CD\u5E86\uFF0C\u4E4C\u9C81\u6728\u9F50\uFF0C\u9999\u6E2F\u7279\u522B\u884C\u653F\u533A\uFF0C\u53F0\u5317
+gmt9=\uFF08GMT\uFF0B09:00\uFF09\u4E1C\u4EAC\uFF0C\u5927\u5742\uFF0C\u672D\u5E4C\uFF0C\u6C49\u57CE\uFF0C\u96C5\u5E93\u8328\u514B
+gmt930=\uFF08GMT\uFF0B09:30\uFF09 \u963F\u5FB7\u83B1\u5FB7
+gmt10=\uFF08GMT\uFF0B10:00\uFF09\u5E03\u91CC\u65AF\u73ED\uFF0C\u5173\u5C9B\uFF0C\u582A\u57F9\u62C9\uFF0C\u58A8\u5C14\u672C\uFF0C\u6089\u5C3C
+gmt11=\uFF08GMT\uFF0B11:00\uFF09\u9A6C\u52A0\u4E39\uFF0C\u7D22\u7F57\u95E8\u7FA4\u5C9B\uFF0C\u65B0\u5580\u91CC\u591A\u5C3C\u4E9A
+gmt12=\uFF08GMT\uFF0B12:00\uFF09\u5BCC\u58EB\uFF0C\u52D8\u5BDF\u52A0\u534A\u5C9B\uFF0C\u9A6C\u7ECD\u5C14\u7FA4\u5C9B\uFF0C\u60E0\u7075\u987F
+gmt13=\uFF08GMT\uFF0B13:00\uFF09\u52AA\u5E93\u963F\u6D1B\u6CD5
+systime_heading=\u8BBE\u7F6E\u65F6\u95F4
+systime_zone=\u65F6\u533A
+systime_time=\u65F6\u95F4
+systime_synchronization=\u5BF9\u65F6\u8BBE\u7F6E
+systime_sync_type=\u5BF9\u65F6\u65B9\u5F0F
+systime_sync_type_ntp=NTP
+systime_sync_server=\u5BF9\u65F6\u670D\u52A1\u5668
