--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -1,5 +1,10 @@
 tip_inputname=Please input user name
 tip_inputpwd=Please input password
+oper_success=Done
+oper_fail=Fail
+neterror=Network Error
+exceptionerror=Occur Exception 
+unknownerror=Unknown Error
 b_time=Time
 b_curdi=The [action] channels at current moment
 b_primarycursor='  Primary Cursor:'
@@ -12,3 +17,6 @@ b_hdrformaterror=Header file format error
 b_faultstarttime=Fault start time
 b_faultduration=Fault duration
 b_filesize=File Size(Byte)
+updatepwd_succ=Success, you must relogin
+updatepwd_error_1=Current password error
+updatepwd_error_2=update password fail
