--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -1,5 +1,10 @@
 tip_inputname=\u8BF7\u586B\u5199\u7528\u6237\u540D
 tip_inputpwd=\u8BF7\u586B\u5199\u5BC6\u7801
+oper_success=\u64CD\u4F5C\u6210\u529F
+oper_fail=\u64CD\u4F5C\u5931\u8D25
+neterror=\u7F51\u7EDC\u9519\u8BEF
+exceptionerror=\u9047\u5230\u5F02\u5E38
+unknownerror=\u672A\u77E5\u9519\u8BEF
 b_time=\u65F6\u95F4
 b_curdi=\u5F53\u524D\u65F6\u95F4[\u52A8\u4F5C]\u7684\u5F00\u5173
 b_primarycursor='  \u4E3B\u6E38\u6807:'
@@ -12,3 +17,6 @@ b_hdrformaterror=HDR\u6587\u4EF6\u683C\u5F0F\u9519\u8BEF
 b_faultstarttime=\u6545\u969C\u8D77\u59CB\u65F6\u95F4
 b_faultduration=\u6545\u969C\u6301\u7EED\u65F6\u95F4
 b_filesize=\u6587\u4EF6\u5927\u5C0F(\u5B57\u8282)
+updatepwd_succ=\u66F4\u65B0\u6210\u529F,\u4F60\u5FC5\u987B\u91CD\u65B0\u767B\u9646
+updatepwd_error_1=\u5F53\u524D\u5BC6\u7801\u9519\u8BEF
+updatepwd_error_2=\u66F4\u65B0\u5BC6\u7801\u5931\u8D25
