增加从数据库中读取运行状态功能

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -20,3 +20,28 @@ b_filesize=File Size(Byte)
 updatepwd_succ=Success, you must relogin
 updatepwd_error_1=Current password error
 updatepwd_error_2=update password fail
+status_unknown=unknown
+runstatus_overview_status=Status
+runstatus_overview_starttime=Start Time
+runstatus_overview_quittime=Quit Time
+runstatus_overview_runtime=Run Duration
+runstatus_overview_timesync=Time Sync
+runstatus_run=Run
+runstatus_quit=Quit
+runstatus_ok=OK
+runstatus_error=ERROR
+runstatus_time_sync=Synchronized
+runstatus_time_desync=Desynchronize
+runstatus_subsys_ipc=IPC
+runstatus_subsys_trigger=Trigger Record
+runstatus_subsys_continue=Continue Record
+runstatus_subsys_gather=Gather Unit
+runstatus_func_filecount=File Count
+runstatus_func_lastfile=Last File
+runstatus_func_lasttime=Last File Time
+runstatus_func_eth=Ethernet
+runstatus_info_devname=Device Name
+runstatus_info_station=Station
+runstatus_info_devmodel=Device Model
+runstatus_info_hwver=Hardware Version
+runstatus_info_swver=Software Version
