--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -20,3 +20,28 @@ b_filesize=\u6587\u4EF6\u5927\u5C0F(\u5B57\u8282)
 updatepwd_succ=\u66F4\u65B0\u6210\u529F,\u4F60\u5FC5\u987B\u91CD\u65B0\u767B\u9646
 updatepwd_error_1=\u5F53\u524D\u5BC6\u7801\u9519\u8BEF
 updatepwd_error_2=\u66F4\u65B0\u5BC6\u7801\u5931\u8D25
+status_unknown=\u672A\u77E5
+runstatus_overview_status=\u7CFB\u7EDF\u72B6\u6001
+runstatus_overview_starttime=\u542F\u52A8\u65F6\u95F4
+runstatus_overview_quittime=\u9000\u51FA\u65F6\u95F4
+runstatus_overview_runtime=\u8FD0\u884C\u65F6\u957F
+runstatus_overview_timesync=\u65F6\u949F\u540C\u6B65
+runstatus_run=\u8FD0\u884C
+runstatus_quit=\u9000\u51FA
+runstatus_ok=\u6B63\u5E38
+runstatus_error=\u9519\u8BEF
+runstatus_time_sync=\u540C\u6B65
+runstatus_time_desync=\u5931\u6B65
+runstatus_subsys_ipc=\u5DE5\u63A7\u5355\u5143
+runstatus_subsys_trigger=\u89E6\u53D1\u5F55\u6CE2\u5355\u5143
+runstatus_subsys_continue=\u8FDE\u7EED\u5F55\u6CE2\u5355\u5143
+runstatus_subsys_gather=\u91C7\u96C6\u5355\u5143
+runstatus_func_filecount=\u6587\u4EF6\u6570\u91CF
+runstatus_func_lastfile=\u6700\u65B0\u6587\u4EF6
+runstatus_func_lasttime=\u6700\u65B0\u6587\u4EF6\u65F6\u95F4
+runstatus_func_eth=\u7F51\u5361
+runstatus_info_devname=\u88C5\u7F6E\u540D\u79F0
+runstatus_info_station=\u5382\u7AD9
+runstatus_info_devmodel=\u88C5\u7F6E\u578B\u53F7
+runstatus_info_hwver=\u786C\u4EF6\u7248\u672C
+runstatus_info_swver=\u8F6F\u4EF6\u7248\u672C
