--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -39,9 +39,9 @@ value=\u503C
 phase=\u76F8\u4F4D
 faultinfo=\u6545\u969C\u4FE1\u606F
 runstatus_title_overview=\u603B\u89C8
-runstatus_title_record=\u5F55\u6CE2
-runstatus_title_network=\u7F51\u7EDC
-runstatus_title_version=\u7248\u672C
+runstatus_title_subsystem=\u5B50\u7CFB\u7EDF
+runstatus_title_function=\u529F\u80FD
+runstatus_title_Info=\u4FE1\u606F
 devconf_heading=\u88C5\u7F6E\u57FA\u672C\u53C2\u6570
 devconf_stationname=\u5382\u7AD9\u540D\u79F0
 devconf_companyname=\u516C\u53F8\u540D\u79F0
