完善运行状态显示、录波文件查找功能

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -45,3 +45,5 @@ runstatus_info_station=Station
 runstatus_info_devmodel=Device Model
 runstatus_info_hwver=Hardware Version
 runstatus_info_swver=Software Version
+file_count=File Count
+fault_count=Fault File Count
