--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -45,3 +45,5 @@ runstatus_info_station=\u5382\u7AD9
 runstatus_info_devmodel=\u88C5\u7F6E\u578B\u53F7
 runstatus_info_hwver=\u786C\u4EF6\u7248\u672C
 runstatus_info_swver=\u8F6F\u4EF6\u7248\u672C
+file_count=\u6587\u4EF6\u603B\u6570
+fault_count=\u6545\u969C\u6587\u4EF6
