增加数据读取功能 1.完成首页、录波文件页面、装置基本设置页面、网络配置页面的数据读取功能 2.完善多语言支持 3.支持通过XML文件读取装置配置

--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -43,11 +43,11 @@ runstatus_title_subsystem=SubSystem
 runstatus_title_function=Function
 runstatus_title_Info=Information
 devconf_heading=Device Basic Configure
-devconf_stationname=Station Name
-devconf_companyname=Company Name
-devconf_devname=Device Name
-devconf_serialno=Serial Number
-devconf_devmodel=Device Model
+devconf_stationname=Station
+devconf_devname=Name
+devconf_remark=Description
+devconf_devmodel=Model
+devconf_version=Version
 devconf_commuprotocol=Communication Protocol
 syspwd_heading=Update user name and password
 syspwd_name=Name
