--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -44,10 +44,10 @@ runstatus_title_function=\u529F\u80FD
 runstatus_title_Info=\u4FE1\u606F
 devconf_heading=\u88C5\u7F6E\u57FA\u672C\u53C2\u6570
 devconf_stationname=\u5382\u7AD9\u540D\u79F0
-devconf_companyname=\u516C\u53F8\u540D\u79F0
 devconf_devname=\u88C5\u7F6E\u540D\u79F0
-deconf_serialno=\u5E8F\u5217\u53F7
+devconf_remark=\u63CF\u8FF0\u4FE1\u606F
 devconf_devmodel=\u88C5\u7F6E\u578B\u53F7
+devconf_version=\u7248\u672C
 devconf_commuprotocol=\u901A\u4FE1\u89C4\u7EA6
 syspwd_heading=\u4FEE\u6539\u7528\u6237\u540D\u548C\u5BC6\u7801
 syspwd_name=\u7528\u6237\u540D
