完成配置文件访问接口封装

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -5,6 +5,9 @@ oper_fail=Fail
 neterror=Network Error
 exceptionerror=Occur Exception 
 unknownerror=Unknown Error
+err_none=Success
+err_savetofile=Fail to save to file
+err_savetodb=Fail to save to database
 b_time=Time
 b_curdi=The [action] channels at current moment
 b_primarycursor='  Primary Cursor:'
