--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -47,3 +47,6 @@ runstatus_info_hwver=\u786C\u4EF6\u7248\u672C
 runstatus_info_swver=\u8F6F\u4EF6\u7248\u672C
 file_count=\u6587\u4EF6\u603B\u6570
 fault_count=\u6545\u969C\u6587\u4EF6
+err_none=\u6210\u529F
+err_savetofile=\u4FDD\u5B58\u6570\u636E\u5230\u6587\u4EF6\u5931\u8D25
+err_savetodb=\u4FDD\u5B58\u6570\u636E\u5230\u6570\u636E\u5E93\u5931\u8D25
