--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -11,6 +11,8 @@ close=Close
 confirm=Confirm
 btn_ok=Confirm
 btn_cancel=Cancel
+yes=Yes
+no=No
 nav_runstatus=Run Status
 nav_setup=Device Parameter
 nav_setup_dev=Basic configure
@@ -94,3 +96,10 @@ systime_synchronization=Setup Time Synchronization
 systime_sync_type=Synchronization Mode
 systime_sync_type_ntp=NTP
 systime_sync_server=Synchronization Server
+terminal_board=Board
+terminal_index=Terminal Index
+terminal_name=Name
+terminal_class=Class
+terminal_Rate=Rate Factor
+terminal_debounce=Debounce Time(us)
+terminal_reverse=Reverse
