--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -11,6 +11,8 @@ close=\u5173\u95ed
 confirm=\u786e\u5b9a
 btn_ok=\u786E\u5B9A
 btn_cancel=\u53D6\u6D88
+yes=\u662F
+no=\u5426
 nav_runstatus=\u8FD0\u884C\u72B6\u6001
 nav_setup=\u88C5\u7F6E\u53C2\u6570
 nav_setup_dev=\u57FA\u672C\u914D\u7F6E
@@ -94,3 +96,10 @@ systime_synchronization=\u5BF9\u65F6\u8BBE\u7F6E
 systime_sync_type=\u5BF9\u65F6\u65B9\u5F0F
 systime_sync_type_ntp=NTP
 systime_sync_server=\u5BF9\u65F6\u670D\u52A1\u5668
+terminal_board=\u6240\u5C5E\u677F\u5361
+terminal_index=\u7AEF\u5B50\u5E8F\u53F7
+terminal_name=\u540D\u79F0
+terminal_class=\u7C7B\u578B
+terminal_Rate=\u53D8\u6BD4\u7CFB\u6570
+terminal_debounce=\u6D88\u6296\u65F6\u95F4(us)
+terminal_reverse=\u662F\u5426\u53CD\u5411
