增加对一个请求中转换多个对象的支持

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -8,6 +8,7 @@ unknownerror=Unknown Error
 err_none=Success
 err_savetofile=Fail to save to file
 err_savetodb=Fail to save to database
+err_update=Fail to update configure
 b_time=Time
 b_curdi=The [action] channels at current moment
 b_primarycursor='  Primary Cursor:'
@@ -50,3 +51,8 @@ runstatus_info_hwver=Hardware Version
 runstatus_info_swver=Software Version
 file_count=File Count
 fault_count=Fault File Count
+terminal_type_ai_amp=AMP
+terminal_type_ai_vol=VOL
+terminal_type_ai_dc=DC
+terminal_type_bi=BI
+terminal_type_bo=BO
