--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -50,3 +50,9 @@ fault_count=\u6545\u969C\u6587\u4EF6
 err_none=\u6210\u529F
 err_savetofile=\u4FDD\u5B58\u6570\u636E\u5230\u6587\u4EF6\u5931\u8D25
 err_savetodb=\u4FDD\u5B58\u6570\u636E\u5230\u6570\u636E\u5E93\u5931\u8D25
+err_update=\u66F4\u65B0\u914D\u7F6E\u5931\u8D25
+terminal_type_ai_amp=\u4EA4\u6D41\u7535\u6D41
+terminal_type_ai_vol=\u4EA4\u6D41\u7535\u538B
+terminal_type_ai_dc=\u76F4\u6D41
+terminal_type_bi=\u5F00\u5165
+terminal_type_bo=\u5F00\u51FA
