--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -96,10 +96,20 @@ systime_synchronization=Setup Time Synchronization
 systime_sync_type=Synchronization Mode
 systime_sync_type_ntp=NTP
 systime_sync_server=Synchronization Server
+terminal_heading=Terminal Information
 terminal_board=Board
-terminal_index=Terminal Index
+terminal_index=Index
 terminal_name=Name
-terminal_class=Class
+terminal_type=Type
 terminal_Rate=Rate Factor
 terminal_debounce=Debounce Time(us)
 terminal_reverse=Reverse
+channel_heading=Channel Information
+channel_name=Name
+channel_id=ID
+channel_unit=Unit
+channel_rate1=Rate 1st
+channel_unit1=Unit 1st
+channel_rate2=Rate 2nd
+channel_unit2=Unit 2nd
+channel_val=Default Value
