--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -96,10 +96,20 @@ systime_synchronization=\u5BF9\u65F6\u8BBE\u7F6E
 systime_sync_type=\u5BF9\u65F6\u65B9\u5F0F
 systime_sync_type_ntp=NTP
 systime_sync_server=\u5BF9\u65F6\u670D\u52A1\u5668
+terminal_heading=\u7AEF\u5B50\u4FE1\u606F
 terminal_board=\u6240\u5C5E\u677F\u5361
-terminal_index=\u7AEF\u5B50\u5E8F\u53F7
+terminal_index=\u5E8F\u53F7
 terminal_name=\u540D\u79F0
-terminal_class=\u7C7B\u578B
+terminal_type=\u7C7B\u578B
 terminal_Rate=\u53D8\u6BD4\u7CFB\u6570
 terminal_debounce=\u6D88\u6296\u65F6\u95F4(us)
 terminal_reverse=\u662F\u5426\u53CD\u5411
+channel_heading=\u5BF9\u5E94\u901A\u9053\u4FE1\u606F
+channel_name=\u540D\u79F0
+channel_id=\u552F\u4E00\u6807\u8BC6
+channel_unit=\u5355\u4F4D(\u5F53\u524D\u91CF\u7EB2)
+channel_rate1=\u6BD4\u4F8B\u7CFB\u6570(\u91CF\u7EB2\u7C7B\u578B1)
+channel_unit1=\u5355\u4F4D(\u91CF\u7EB2\u7C7B\u578B1)
+channel_rate2=\u6BD4\u4F8B\u7CFB\u6570(\u91CF\u7EB2\u7C7B\u578B2)
+channel_unit2=\u5355\u4F4D(\u91CF\u7EB2\u7C7B\u578B2)
+channel_val=\u9ED8\u8BA4\u503C
