功能增加 1.增加功能模块页面功能 2.增加定值页面功能

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -1,7 +1,13 @@
+all=All
+create=Create
+edit=Edit
+delete=Delete
+relate=Create Settings
 tip_inputname=Please input user name
 tip_inputpwd=Please input password
 oper_success=Done
 oper_fail=Fail
+operate_confirm=Operate Confirm
 neterror=Network Error
 exceptionerror=Occur Exception 
 unknownerror=Unknown Error
@@ -56,3 +62,11 @@ terminal_type_ai_vol=VOL
 terminal_type_ai_dc=DC
 terminal_type_bi=BI
 terminal_type_bo=BO
+module_delete_confirm=Are you sure to delete the module?
+moduleconfig_delete_confirm=Are you sure to delete the module configure?
+moduleparam_delete_confirm=Are you sure to delete the module parameter?
+stgroup_delete_confirm=Are you sure to delete the setting group?
+setting_delete_confirm=Are you sure to delete the setting?
+create_settings=Create Settings
+stgroup_exist=The group is exist, Do you want to rewrite it?
+stgroup_no_exist=Will create the group and settings
