--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -11,15 +11,24 @@ close=Close
 confirm=Confirm
 btn_ok=Confirm
 btn_cancel=Cancel
+operate_confirm=Operate Confirm
 yes=Yes
 no=No
+all=All
+create=Create
+edit=Edit
+delete=Delete
+relate=Create Settings
+update=Update
 nav_runstatus=Run Status
-nav_setup=Device Parameter
+nav_setup=DFU Parameter
 nav_setup_dev=Basic configure
 nav_setup_network=Network
 nav_setup_primarydev=Primary device
 nav_setup_channel=Channel
+nav_setup_modules=Modules
 nav_setup_setting=Setting
+nav_mgr=Management Board
 nav_faultrecord=Fault Record
 nav_systemtool=System Tool
 nav_sys_settime=Setup Time
@@ -51,6 +60,8 @@ devconf_remark=Description
 devconf_devmodel=Model
 devconf_version=Version
 devconf_commuprotocol=Communication Protocol
+ethernet_list=Ethernet List
+ethernet_param=Ethernet Parameter
 syspwd_heading=Update user name and password
 syspwd_name=Name
 syspwd_oldpwd=Current password
@@ -113,3 +124,40 @@ channel_unit1=Unit 1st
 channel_rate2=Rate 2nd
 channel_unit2=Unit 2nd
 channel_val=Default Value
+module_list=Modules
+module_property=Module Property
+module_config=Module Configures
+module_param=Module Parameters
+module_kind=Module Type
+module_kind_sys=System
+module_kind_bus=Bus
+module_kind_line=Line
+module_kind_switch=Switch
+module_kind_analog=Analog
+module_id=ID
+module_name=Name
+module_create=Create New Module
+module_config_create=Add Module Configure
+module_param_create=Add Module Parameter
+module_item_id=ID
+module_item_name=Name
+module_item_kind=Type
+module_item_valType=Value Type
+module_item_val=Value
+stgroup=Setting Group
+stgroup_name=Name
+stgroup_list=Setting Group List
+setting=Setting
+set_id=ID
+set_group=Group
+set_name=Name
+set_unit=Unit
+set_type=Type
+set_val=Value
+set_max=Max Value
+set_min=Min Value
+set_step=Step
+set_rate1=Rate 1
+set_unit1=Unit 1
+set_rate2=Rate 2
+set_unit2=Unit 2
