--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -11,15 +11,23 @@ close=\u5173\u95ed
 confirm=\u786e\u5b9a
 btn_ok=\u786E\u5B9A
 btn_cancel=\u53D6\u6D88
+operate_confirm=\u64CD\u4F5C\u786E\u8BA4
 yes=\u662F
 no=\u5426
+all=\u6240\u6709
+create=\u589E\u52A0
+edit=\u4FEE\u6539
+delete=\u5220\u9664
+update=\u66F4\u65B0
 nav_runstatus=\u8FD0\u884C\u72B6\u6001
-nav_setup=\u88C5\u7F6E\u53C2\u6570
+nav_setup=\u901A\u4FE1\u677F
 nav_setup_dev=\u57FA\u672C\u914D\u7F6E
 nav_setup_network=\u7F51\u7EDC
 nav_setup_primarydev=\u4E00\u6B21\u8BBE\u5907
 nav_setup_channel=\u901A\u9053
+nav_setup_modules=\u529F\u80FD\u6A21\u5757
 nav_setup_setting=\u5B9A\u503C
+nav_mgr=\u7BA1\u7406\u677F
 nav_faultrecord=\u6545\u969c\u5f55\u6ce2
 nav_systemtool=\u7CFB\u7EDF\u5DE5\u5177
 nav_sys_settime=\u65f6\u95f4\u8bbe\u7f6e
@@ -51,6 +59,8 @@ devconf_remark=\u63CF\u8FF0\u4FE1\u606F
 devconf_devmodel=\u88C5\u7F6E\u578B\u53F7
 devconf_version=\u7248\u672C
 devconf_commuprotocol=\u901A\u4FE1\u89C4\u7EA6
+ethernet_list=\u7F51\u5361\u5217\u8868
+ethernet_param=\u7F51\u5361\u53C2\u6570
 syspwd_heading=\u4FEE\u6539\u7528\u6237\u540D\u548C\u5BC6\u7801
 syspwd_name=\u7528\u6237\u540D
 syspwd_oldpwd=\u5F53\u524D\u5BC6\u7801
@@ -113,3 +123,39 @@ channel_unit1=\u5355\u4F4D(\u91CF\u7EB2\u7C7B\u578B1)
 channel_rate2=\u6BD4\u4F8B\u7CFB\u6570(\u91CF\u7EB2\u7C7B\u578B2)
 channel_unit2=\u5355\u4F4D(\u91CF\u7EB2\u7C7B\u578B2)
 channel_val=\u9ED8\u8BA4\u503C
+module_list=\u6A21\u5757\u5217\u8868
+module_property=\u6A21\u5757\u5C5E\u6027
+module_config=\u6A21\u5757\u914D\u7F6E
+module_param=\u6A21\u5757\u53C2\u6570
+module_kind=\u7C7B\u578B
+module_kind_sys=\u7CFB\u7EDF
+module_kind_bus=\u6BCD\u7EBF
+module_kind_line=\u7EBF\u8DEF
+module_kind_switch=\u5F00\u5173\u91CF
+module_kind_analog=\u6A21\u62DF\u91CF
+module_id=\u552F\u4E00\u6807\u8BC6
+module_name=\u540D\u79F0
+module_create=\u521B\u5EFA\u65B0\u529F\u80FD\u6A21\u5757
+module_config_create=\u6DFB\u52A0\u6A21\u5757\u914D\u7F6E
+module_param_create=\u6DFB\u52A0\u6A21\u5757\u53C2\u6570
+module_item_id=\u552F\u4E00\u6807\u8BC6
+module_item_name=\u540D\u79F0
+module_item_kind=\u7C7B\u578B
+module_item_valType=\u503C\u7C7B\u578B
+module_item_val=\u503C
+stgroup=\u5B9A\u503C\u7EC4
+stgroup_name=\u540D\u79F0
+setting=\u5B9A\u503C
+set_id=\u7D22\u5F15
+set_group=\u7EC4
+set_name=\u540D\u79F0
+set_unit=\u5355\u4F4D
+set_type=\u7C7B\u578B
+set_val=\u9ED8\u8BA4\u503C
+set_max=\u6700\u5927\u503C
+set_min=\u6700\u5C0F\u503C
+set_step=\u6B65\u8FDB\u503C
+set_rate1=\u7CFB\u6570(\u91CF\u7EB21)
+set_unit1=\u5355\u4F4D(\u91CF\u7EB21)
+set_rate2=\u7CFB\u6570(\u91CF\u7EB22)
+set_unit2=\u5355\u4F4D(\u91CF\u7EB22)
