--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -1,7 +1,13 @@
+all=\u6240\u6709
+create=\u589E\u52A0
+edit=\u4FEE\u6539
+delete=\u5220\u9664
+relate=\u6839\u636E\u672C\u6A21\u5757\u53C2\u6570\u521B\u5EFA\u5B9A\u503C
 tip_inputname=\u8BF7\u586B\u5199\u7528\u6237\u540D
 tip_inputpwd=\u8BF7\u586B\u5199\u5BC6\u7801
 oper_success=\u64CD\u4F5C\u6210\u529F
 oper_fail=\u64CD\u4F5C\u5931\u8D25
+operate_confirm=\u64CD\u4F5C\u786E\u8BA4
 neterror=\u7F51\u7EDC\u9519\u8BEF
 exceptionerror=\u9047\u5230\u5F02\u5E38
 unknownerror=\u672A\u77E5\u9519\u8BEF
@@ -56,3 +62,11 @@ terminal_type_ai_vol=\u4EA4\u6D41\u7535\u538B
 terminal_type_ai_dc=\u76F4\u6D41
 terminal_type_bi=\u5F00\u5165
 terminal_type_bo=\u5F00\u51FA
+module_delete_confirm=\u662F\u5426\u786E\u5B9A\u5220\u9664\u6B64\u529F\u80FD\u6A21\u5757?
+moduleconfig_delete_confirm=\u662F\u5426\u786E\u5B9A\u5220\u9664\u6B64\u529F\u80FD\u914D\u7F6E?
+moduleparam_delete_confirm=\u662F\u5426\u786E\u5B9A\u5220\u9664\u6B64\u529F\u80FD\u53C2\u6570?
+stgroup_delete_confirm=\u662F\u5426\u786E\u5B9A\u5220\u9664\u6B64\u5B9A\u503C\u7EC4?
+setting_delete_confirm=\u662F\u5426\u786E\u5B9A\u5220\u9664\u6B64\u5B9A\u503C?
+create_settings=\u521B\u5EFA\u5B9A\u503C
+stgroup_exist=\u6B64\u5B9A\u503C\u7EC4\u5DF2\u7ECF\u5B58\u5728,\u662F\u5426\u91CD\u5199?
+stgroup_no_exist=\u5C06\u521B\u5EFA\u5B9A\u503C\u7EC4\u548C\u5B9A\u503C
