修改配置读取方法 增加SVG图形操作

--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -23,12 +23,16 @@ update=Update
 nav_runstatus=Run Status
 nav_setup=DFU Parameter
 nav_setup_dev=Basic configure
-nav_setup_network=Network
+nav_setup_network=Gather Network
 nav_setup_primarydev=Primary device
 nav_setup_channel=Channel
 nav_setup_modules=Modules
 nav_setup_setting=Setting
+nav_setup_apply=Apply Configure
 nav_mgr=Management Board
+nav_mgr_network=Outward Network
+nav_mgr_Line=Line Parameter
+nav_mgr_run=Run Parameter
 nav_faultrecord=Fault Record
 nav_systemtool=System Tool
 nav_sys_settime=Setup Time
@@ -62,6 +66,10 @@ devconf_version=Version
 devconf_commuprotocol=Communication Protocol
 ethernet_list=Ethernet List
 ethernet_param=Ethernet Parameter
+ethernet_name=Name
+ethernet_ip=IP
+ethernet_mask=Mask
+ethernet_gate=Gate
 syspwd_heading=Update user name and password
 syspwd_name=Name
 syspwd_oldpwd=Current password
@@ -107,6 +115,8 @@ systime_synchronization=Setup Time Synchronization
 systime_sync_type=Synchronization Mode
 systime_sync_type_ntp=NTP
 systime_sync_server=Synchronization Server
+sysreboot_heading=Reboot Device
+sysreboot_desc=Reboot Device
 terminal_heading=Terminal Information
 terminal_board=Board
 terminal_index=Index
@@ -161,3 +171,5 @@ set_rate1=Rate 1
 set_unit1=Unit 1
 set_rate2=Rate 2
 set_unit2=Unit 2
+apply_dfu_heading=Apply DFU Configure
+apply_dfu_config=Apply DFU Configure
