--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -15,6 +15,10 @@ err_none=Success
 err_savetofile=Fail to save to file
 err_savetodb=Fail to save to database
 err_update=Fail to update configure
+err_sendmsg=Fail to send message
+err_comm_error=Occur a error
+err_comm_sendfail=Fail to send message
+err_comm_timeout=Timeout
 b_time=Time
 b_curdi=The [action] channels at current moment
 b_primarycursor='  Primary Cursor:'
@@ -70,3 +74,6 @@ setting_delete_confirm=Are you sure to delete the setting?
 create_settings=Create Settings
 stgroup_exist=The group is exist, Do you want to rewrite it?
 stgroup_no_exist=Will create the group and settings
+dfuconf_apply=Apply DFU Configure
+dfuconf_apply_confirm=Are you sure to apply the dfu configure?
+dfuconf_apply_success=Success to apply new configure to DFU
