--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -57,6 +57,10 @@ err_none=\u6210\u529F
 err_savetofile=\u4FDD\u5B58\u6570\u636E\u5230\u6587\u4EF6\u5931\u8D25
 err_savetodb=\u4FDD\u5B58\u6570\u636E\u5230\u6570\u636E\u5E93\u5931\u8D25
 err_update=\u66F4\u65B0\u914D\u7F6E\u5931\u8D25
+err_sendmsg=\u53D1\u9001\u547D\u4EE4\u5931\u8D25
+err_comm_error=\u9047\u5230\u672A\u77E5\u9519\u8BEF
+err_comm_sendfail=\u53D1\u9001\u547D\u4EE4\u5931\u8D25
+err_comm_timeout=\u7B49\u5F85\u7ED3\u679C\u8D85\u65F6
 terminal_type_ai_amp=\u4EA4\u6D41\u7535\u6D41
 terminal_type_ai_vol=\u4EA4\u6D41\u7535\u538B
 terminal_type_ai_dc=\u76F4\u6D41
@@ -70,3 +74,6 @@ setting_delete_confirm=\u662F\u5426\u786E\u5B9A\u5220\u9664\u6B64\u5B9A\u503C?
 create_settings=\u521B\u5EFA\u5B9A\u503C
 stgroup_exist=\u6B64\u5B9A\u503C\u7EC4\u5DF2\u7ECF\u5B58\u5728,\u662F\u5426\u91CD\u5199?
 stgroup_no_exist=\u5C06\u521B\u5EFA\u5B9A\u503C\u7EC4\u548C\u5B9A\u503C
+dfuconf_apply=\u4E0B\u88C5\u914D\u7F6E
+dfuconf_apply_confirm=\u91CD\u65B0\u4E0B\u88C5\u914D\u7F6E\u5C06\u8986\u76D6\u901A\u4FE1\u677F\u5F53\u524D\u914D\u7F6E\uFF0C\u662F\u5426\u786E\u5B9A\u8981\u4E0B\u88C5\u914D\u7F6E\u5230\u901A\u4FE1\u677F?
+dfuconf_apply_success=\u4E0B\u88C5\u65B0\u914D\u7F6E\u5230\u901A\u4FE1\u677F\u6210\u529F.\u8BF7\u624B\u52A8\u91CD\u542F\u88C5\u7F6E.
