--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -22,12 +22,16 @@ update=\u66F4\u65B0
 nav_runstatus=\u8FD0\u884C\u72B6\u6001
 nav_setup=\u901A\u4FE1\u677F
 nav_setup_dev=\u57FA\u672C\u914D\u7F6E
-nav_setup_network=\u7F51\u7EDC
+nav_setup_network=\u91C7\u96C6\u7F51\u7EDC
 nav_setup_primarydev=\u4E00\u6B21\u8BBE\u5907
 nav_setup_channel=\u901A\u9053
 nav_setup_modules=\u529F\u80FD\u6A21\u5757
 nav_setup_setting=\u5B9A\u503C
+nav_setup_apply=\u4E0B\u88C5\u914D\u7F6E
 nav_mgr=\u7BA1\u7406\u677F
+nav_mgr_network=\u5BF9\u5916\u7F51\u7EDC
+nav_mgr_Line=\u7EBF\u8DEF\u53C2\u6570
+nav_mgr_run=\u8FD0\u884C\u53C2\u6570
 nav_faultrecord=\u6545\u969c\u5f55\u6ce2
 nav_systemtool=\u7CFB\u7EDF\u5DE5\u5177
 nav_sys_settime=\u65f6\u95f4\u8bbe\u7f6e
@@ -61,6 +65,10 @@ devconf_version=\u7248\u672C
 devconf_commuprotocol=\u901A\u4FE1\u89C4\u7EA6
 ethernet_list=\u7F51\u5361\u5217\u8868
 ethernet_param=\u7F51\u5361\u53C2\u6570
+ethernet_name=\u540D\u79F0
+ethernet_ip=IP\u5730\u5740
+ethernet_mask=\u5B50\u7F51\u63A9\u7801
+ethernet_gate=\u7F51\u5173
 syspwd_heading=\u4FEE\u6539\u7528\u6237\u540D\u548C\u5BC6\u7801
 syspwd_name=\u7528\u6237\u540D
 syspwd_oldpwd=\u5F53\u524D\u5BC6\u7801
@@ -106,6 +114,8 @@ systime_synchronization=\u5BF9\u65F6\u8BBE\u7F6E
 systime_sync_type=\u5BF9\u65F6\u65B9\u5F0F
 systime_sync_type_ntp=NTP
 systime_sync_server=\u5BF9\u65F6\u670D\u52A1\u5668
+sysreboot_heading=\u91CD\u542F\u88C5\u7F6E
+sysreboot_desc=\u70B9\u51FB\u6309\u94AE\u91CD\u542F\u5F55\u6CE2\u5668\uFF0C\u91CD\u542F\u540E\u8BF7\u7A0D\u540E\u518D\u91CD\u65B0\u767B\u9646
 terminal_heading=\u7AEF\u5B50\u4FE1\u606F
 terminal_board=\u6240\u5C5E\u677F\u5361
 terminal_index=\u5E8F\u53F7
@@ -159,3 +169,5 @@ set_rate1=\u7CFB\u6570(\u91CF\u7EB21)
 set_unit1=\u5355\u4F4D(\u91CF\u7EB21)
 set_rate2=\u7CFB\u6570(\u91CF\u7EB22)
 set_unit2=\u5355\u4F4D(\u91CF\u7EB22)
+apply_dfu_heading=\u4E0B\u88C5\u901A\u4FE1\u677F\u914D\u7F6E
+apply_dfu_config=\u5C06\u521A\u624D\u5BF9\u901A\u4FE1\u677F\u6240\u505A\u7684\u4FEE\u6539\u4E00\u8D77\u4E0B\u88C5\u5230\u901A\u4FE1\u677F\u4E2D\uFF0C\u914D\u7F6E\u4E0B\u88C5\u6210\u529F\u540E\u9700\u624B\u52A8\u91CD\u542F\u88C5\u7F6E\u4EE5\u751F\u6548.
