读取管理板配置

--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -32,7 +32,7 @@ nav_setup_apply=Apply Configure
 nav_mgr=Management Board
 nav_mgr_network=Outward Network
 nav_mgr_Line=Line Parameter
-nav_mgr_run=Run Parameter
+nav_mgr_config=Run Parameter
 nav_faultrecord=Fault Record
 nav_systemtool=System Tool
 nav_sys_settime=Setup Time
