--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -31,7 +31,7 @@ nav_setup_apply=\u4E0B\u88C5\u914D\u7F6E
 nav_mgr=\u7BA1\u7406\u677F
 nav_mgr_network=\u5BF9\u5916\u7F51\u7EDC
 nav_mgr_Line=\u7EBF\u8DEF\u53C2\u6570
-nav_mgr_run=\u8FD0\u884C\u53C2\u6570
+nav_mgr_config=\u8FD0\u884C\u53C2\u6570
 nav_faultrecord=\u6545\u969c\u5f55\u6ce2
 nav_systemtool=\u7CFB\u7EDF\u5DE5\u5177
 nav_sys_settime=\u65f6\u95f4\u8bbe\u7f6e
