增加线路配置、对外网络配置等

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -77,3 +77,4 @@ stgroup_no_exist=Will create the group and settings
 dfuconf_apply=Apply DFU Configure
 dfuconf_apply_confirm=Are you sure to apply the dfu configure?
 dfuconf_apply_success=Success to apply new configure to DFU
+line_delete_confirm=Are you sure to delete the line?
