--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -173,3 +173,36 @@ set_rate2=Rate 2
 set_unit2=Unit 2
 apply_dfu_heading=Apply DFU Configure
 apply_dfu_config=Apply DFU Configure
+faultfile_head=Fault Record File Configure
+filesavepath=File Save Path
+filesavedays=File Save Days
+continuefile_head=Continue Record File Configure
+syslog_head=System Log Configure
+loglevel=Log Level
+loglevel_no=No Log
+loglevel_error=Error
+loglevel_alarm=Alarm
+loglevel_trace=Trace
+protocol_name=Communication Protocol
+protocol_port=Listening Port
+protocol_zj103=ZheJiang 103
+line=Line
+line_param=Line Parameter
+line_length=Line Length
+line_ratedcurrent=Rated Current
+line_ratedvoltage=Rated Voltage
+line_r0=Zero-sequence Resistance
+line_r1=Positive-sequence Resistance
+line_r2=Negative-sequence Resistance
+line_x0=Zero-sequence Reactance
+line_x1=Positive-sequence Reactance
+line_x2=Negative-sequence Reactance
+line_channel=Line & Channel Correlation
+line_ia=Current A
+line_ib=Current B
+line_ic=Current B
+line_i0=Current Zero
+line_ua=Voltage A
+line_ub=Voltage B
+line_uc=Voltage B
+line_u0=Voltage Zero
