--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -77,3 +77,4 @@ stgroup_no_exist=\u5C06\u521B\u5EFA\u5B9A\u503C\u7EC4\u548C\u5B9A\u503C
 dfuconf_apply=\u4E0B\u88C5\u914D\u7F6E
 dfuconf_apply_confirm=\u91CD\u65B0\u4E0B\u88C5\u914D\u7F6E\u5C06\u8986\u76D6\u901A\u4FE1\u677F\u5F53\u524D\u914D\u7F6E\uFF0C\u662F\u5426\u786E\u5B9A\u8981\u4E0B\u88C5\u914D\u7F6E\u5230\u901A\u4FE1\u677F?
 dfuconf_apply_success=\u4E0B\u88C5\u65B0\u914D\u7F6E\u5230\u901A\u4FE1\u677F\u6210\u529F.\u8BF7\u624B\u52A8\u91CD\u542F\u88C5\u7F6E.
+line_delete_confirm=\u662F\u5426\u786E\u8BA4\u5220\u9664\u6B64\u7EBF\u8DEF?
