--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -171,3 +171,36 @@ set_rate2=\u7CFB\u6570(\u91CF\u7EB22)
 set_unit2=\u5355\u4F4D(\u91CF\u7EB22)
 apply_dfu_heading=\u4E0B\u88C5\u901A\u4FE1\u677F\u914D\u7F6E
 apply_dfu_config=\u5C06\u521A\u624D\u5BF9\u901A\u4FE1\u677F\u6240\u505A\u7684\u4FEE\u6539\u4E00\u8D77\u4E0B\u88C5\u5230\u901A\u4FE1\u677F\u4E2D\uFF0C\u914D\u7F6E\u4E0B\u88C5\u6210\u529F\u540E\u9700\u624B\u52A8\u91CD\u542F\u88C5\u7F6E\u4EE5\u751F\u6548.
+faultfile_head=\u6545\u969C\u5F55\u6CE2\u6587\u4EF6\u914D\u7F6E
+filesavepath=\u5B58\u653E\u8DEF\u5F84
+filesavedays=\u5B58\u653E\u5929\u6570
+continuefile_head=\u8FDE\u7EED\u5F55\u6CE2\u6587\u4EF6\u914D\u7F6E
+syslog_head=\u7CFB\u7EDF\u65E5\u5FD7\u914D\u7F6E
+loglevel=\u65E5\u5FD7\u7B49\u7EA7
+loglevel_no=\u65E0\u65E5\u5FD7
+loglevel_error=\u9519\u8BEF\u7EA7
+loglevel_alarm=\u8B66\u544A\u7EA7
+loglevel_trace=\u8DDF\u8E2A\u7EA7
+protocol_name=\u901A\u4FE1\u89C4\u7EA6
+protocol_port=\u76D1\u542C\u7AEF\u53E3
+protocol_zj103=\u6D59\u6C5F 103
+line=\u7EBF\u8DEF
+line_param=\u7EBF\u8DEF\u53C2\u6570
+line_length=\u7EBF\u8DEF\u603B\u957F\u5EA6
+line_ratedcurrent=\u989D\u5B9A\u7535\u6D41
+line_ratedvoltage=\u989D\u5B9A\u7535\u538B
+line_r0=\u96F6\u5E8F\u7535\u963B
+line_r1=\u6B63\u5E8F\u7535\u963B
+line_r2=\u8D1F\u5E8F\u7535\u963B
+line_x0=\u96F6\u5E8F\u7535\u6297
+line_x1=\u6B63\u5E8F\u7535\u6297
+line_x2=\u8D1F\u5E8F\u7535\u6297
+line_channel=\u7EBF\u8DEF\u901A\u9053\u5173\u8054
+line_ia=A\u76F8\u7535\u6D41
+line_ib=B\u76F8\u7535\u6D41
+line_ic=C\u76F8\u7535\u6D41
+line_i0=\u96F6\u5E8F\u7535\u6D41
+line_ua=A\u76F8\u7535\u538B
+line_ub=B\u76F8\u7535\u538B
+line_uc=C\u76F8\u7535\u538B
+line_u0=\u96F6\u5E8F\u7535\u538B
