养成每天上传的好习惯
1.完成管理板配置下装

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -77,4 +77,17 @@ stgroup_no_exist=Will create the group and settings
 dfuconf_apply=Apply DFU Configure
 dfuconf_apply_confirm=Are you sure to apply the dfu configure?
 dfuconf_apply_success=Success to apply new configure to DFU
+dfuconf_apply_fail=Fail to apply new configure to DFU
 line_delete_confirm=Are you sure to delete the line?
+createline=Create line From the module
+create_line=Create Line
+line_exist=The Line is exist, Do you want to rewrite it?
+line_no_exist=Will create the line
+mgrconf_apply_fail=Fail to apply new basic configure to Manager board!
+mgrconf_apply_success=Success to apply new basic configure to Manager board.
+mgrnetwork_apply_fail=Fail to apply new network configure to Manager board!
+mgrnetwork_apply_success=Success to apply new network configure to Manager board.
+mgrline_apply_fail=Fail to apply new line configure to Manager board!
+mgrline_apply_success=Success to apply new line configure to Manager board.
+systime_apply_fail=Fail to setup time!
+systime_apply_success=Success to setup time.
