--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -76,5 +76,18 @@ stgroup_exist=\u6B64\u5B9A\u503C\u7EC4\u5DF2\u7ECF\u5B58\u5728,\u662F\u5426\u91C
 stgroup_no_exist=\u5C06\u521B\u5EFA\u5B9A\u503C\u7EC4\u548C\u5B9A\u503C
 dfuconf_apply=\u4E0B\u88C5\u914D\u7F6E
 dfuconf_apply_confirm=\u91CD\u65B0\u4E0B\u88C5\u914D\u7F6E\u5C06\u8986\u76D6\u901A\u4FE1\u677F\u5F53\u524D\u914D\u7F6E\uFF0C\u662F\u5426\u786E\u5B9A\u8981\u4E0B\u88C5\u914D\u7F6E\u5230\u901A\u4FE1\u677F?
-dfuconf_apply_success=\u4E0B\u88C5\u65B0\u914D\u7F6E\u5230\u901A\u4FE1\u677F\u6210\u529F.\u8BF7\u624B\u52A8\u91CD\u542F\u88C5\u7F6E.
+dfuconf_apply_success=\u4E0B\u88C5\u65B0\u914D\u7F6E\u5230\u901A\u4FE1\u677F\u6210\u529F,\u8BF7\u624B\u52A8\u91CD\u542F\u88C5\u7F6E.
+dfuconf_apply_fail=\u4E0B\u88C5\u65B0\u914D\u7F6E\u5230\u901A\u4FE1\u677F\u5931\u8D25!
 line_delete_confirm=\u662F\u5426\u786E\u8BA4\u5220\u9664\u6B64\u7EBF\u8DEF?
+createline=\u6839\u636E\u672C\u6A21\u5757\u914D\u7F6E\u521B\u5EFA\u7EBF\u8DEF\u914D\u7F6E
+create_line=\u521B\u5EFA\u7EBF\u8DEF
+line_exist=\u6B64\u7EBF\u8DEF\u5DF2\u7ECF\u5B58\u5728\uFF0C\u662F\u5426\u91CD\u5199?
+line_no_exist=\u5C06\u521B\u5EFA\u7EBF\u8DEF\u53CA\u53C2\u6570\u914D\u7F6E.
+mgrconf_apply_fail=\u5E94\u7528\u7BA1\u7406\u677F\u65B0\u57FA\u672C\u914D\u7F6E\u5931\u8D25!
+mgrconf_apply_success=\u5E94\u7528\u7BA1\u7406\u677F\u65B0\u57FA\u672C\u914D\u7F6E\u6210\u529F.
+mgrnetwork_apply_fail=\u5E94\u7528\u7BA1\u7406\u677F\u65B0\u7F51\u7EDC\u914D\u7F6E\u5931\u8D25!
+mgrnetwork_apply_success=\u5E94\u7528\u7BA1\u7406\u677F\u65B0\u7F51\u7EDC\u914D\u7F6E\u6210\u529F.
+mgrline_apply_fail=\u5E94\u7528\u7BA1\u7406\u677F\u65B0\u7EBF\u8DEF\u914D\u7F6E\u5931\u8D25!
+mgrline_apply_success=\u5E94\u7528\u7BA1\u7406\u677F\u65B0\u7EBF\u8DEF\u914D\u7F6E\u6210\u529F.
+systime_apply_fail=\u8BBE\u7F6E\u65F6\u95F4\u5931\u8D25!
+systime_apply_success=\u8BBE\u7F6E\u65F6\u95F4\u6210\u529F.
