--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -188,6 +188,7 @@ protocol_port=Listening Port
 protocol_zj103=ZheJiang 103
 line=Line
 line_param=Line Parameter
+line_name=Line Name
 line_length=Line Length
 line_ratedcurrent=Rated Current
 line_ratedvoltage=Rated Voltage
