--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -186,6 +186,7 @@ protocol_port=\u76D1\u542C\u7AEF\u53E3
 protocol_zj103=\u6D59\u6C5F 103
 line=\u7EBF\u8DEF
 line_param=\u7EBF\u8DEF\u53C2\u6570
+line_name=\u7EBF\u8DEF\u540D\u79F0
 line_length=\u7EBF\u8DEF\u603B\u957F\u5EA6
 line_ratedcurrent=\u989D\u5B9A\u7535\u6D41
 line_ratedvoltage=\u989D\u5B9A\u7535\u538B
