增加日志支持

--- a/WebContent/resources/js/i18n/i18nstring.properties
+++ b/WebContent/resources/js/i18n/i18nstring.properties
@@ -5,6 +5,8 @@ delete=Delete
 relate=Create Settings
 tip_inputname=Please input user name
 tip_inputpwd=Please input password
+tip_login=Please login
+tip_guest=Login as a guest
 oper_success=Done
 oper_fail=Fail
 operate_confirm=Operate Confirm
