--- a/WebContent/resources/js/i18n/i18nstring_zh.properties
+++ b/WebContent/resources/js/i18n/i18nstring_zh.properties
@@ -5,6 +5,8 @@ delete=\u5220\u9664
 relate=\u6839\u636E\u672C\u6A21\u5757\u53C2\u6570\u521B\u5EFA\u5B9A\u503C
 tip_inputname=\u8BF7\u586B\u5199\u7528\u6237\u540D
 tip_inputpwd=\u8BF7\u586B\u5199\u5BC6\u7801
+tip_login=\u8BF7\u767B\u5F55
+tip_guest=\u6E38\u5BA2\u65E0\u9700\u5BC6\u7801\uFF0C\u53EF\u76F4\u63A5\u767B\u5F55
 oper_success=\u64CD\u4F5C\u6210\u529F
 oper_fail=\u64CD\u4F5C\u5931\u8D25
 operate_confirm=\u64CD\u4F5C\u786E\u8BA4
