--- a/src/recordman/i18n/resource/i18nstring.properties
+++ b/src/recordman/i18n/resource/i18nstring.properties
@@ -20,6 +20,8 @@ edit=Edit
 delete=Delete
 relate=Create Settings
 update=Update
+user_admin=Administrator
+user_guest=Guest
 nav_runstatus=Run Status
 nav_setup=DFU Parameter
 nav_setup_dev=Basic configure
