--- a/src/recordman/i18n/resource/i18nstring_zh.properties
+++ b/src/recordman/i18n/resource/i18nstring_zh.properties
@@ -1,8 +1,8 @@
 web_title=\u6545\u969c\u5f55\u6ce2\u5668\u7ba1\u7406\u5e73\u53f0
 product_name=\u6545\u969c\u5f55\u6ce2\u5668\u7ba1\u7406\u5e73\u53f0
 brand=\u6545\u969c\u5f55\u6ce2\u5668\u7ba1\u7406\u5e73\u53f0
-login=\u767b\u5f55
-login_tip=\u8bf7\u767b\u5f55
+login=\u767B\u5F55
+login_tip=\u8bf7\u767B\u5F55
 login_error_tip=\u7528\u6237\u540d\u6216\u5bc6\u7801\u9519\u8bef,\u8bf7\u91cd\u65b0\u8f93\u5165
 Inputaccount_tip=\u8bf7\u8f93\u5165\u7528\u6237\u540d
 Inputpwd_tip=\u8bf7\u8f93\u5165\u5bc6\u7801
@@ -19,6 +19,8 @@ create=\u589E\u52A0
 edit=\u4FEE\u6539
 delete=\u5220\u9664
 update=\u66F4\u65B0
+user_admin=\u7BA1\u7406\u5458
+user_guest=\u6E38\u5BA2
 nav_runstatus=\u8FD0\u884C\u72B6\u6001
 nav_setup=\u901A\u4FE1\u677F
 nav_setup_dev=\u57FA\u672C\u914D\u7F6E
